# winbox-arm

./: BUILD.md  CMakeLists.txt
.github/workflows/: build.yml
assets/translations/: en_US.ts  ru_RU.ts
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
build-linux/AppDir/usr/share/applications/: winbox-arm.desktop
build-linux/src/: Makefile  cmake_install.cmake  winbox-arm
build-linux/src/winbox-arm_autogen/: moc_predefs.h  mocs_compilation.cpp
build-linux/src/winbox-arm_autogen/ULO4IMYJZC/: moc_winbox_protocol.cpp  moc_winbox_protocol.cpp.d
build-linux/src/winbox-arm_autogen/UYX5XTB5RZ/: moc_main_window.cpp  moc_main_window.cpp.d
build-linux/tests/: Makefile  cmake_install.cmake
cmake/: Toolchain-mingw64.cmake
packaging/rpm/: winbox-arm.spec
scripts/: build_all.sh  build_linux.sh  build_macos.sh  build_windows.sh  package_deb.sh  package_rpm.sh
src/: CMakeLists.txt  main.cpp  winbox_client.cpp  winbox_client.h
src/protocol/: winbox_protocol.cpp  winbox_protocol.h
src/ui/: main_window.cpp  main_window.h  resources.qrc
src/utils/: logger.cpp
tests/: CMakeLists.txt
winbox-arm_1.0.0_amd64/DEBIAN/: control
